feat (medic.html): Adiciona PDF da bula.

--- a/html/medic.html
+++ b/html/medic.html
@@ -66,10 +66,11 @@
       <section class="header">
         <img src="../img/spy_family.jpg" alt="">
         <div>
-          <h1>Spy X Family</h1>
+          <h1 id="medic-name">Spy X Family</h1>
           <p>Trata depressão, ansiedade, tédio e muito mais.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi voluptatem, earum consectetur doloribus nemo eos aliquam alias accusamus sunt, nostrum labore tempore dolorum? Facere vel nulla, quibusdam voluptas praesentium labore!
           </p>
+          <a id="medic-pdf">PDF BULA</a>
         </div>
       </section>
       <section class="informations">
