--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -48,35 +48,35 @@
     <h1>Update Medicamentos</h1>
 
     <form id="medicationForm">
-        <label for="name">Nome:</label>
-        <input type="text" id="update-name" name="name" required><br>
+        <label for="update-name">Nome:</label>
+        <input type="text" id="update-name" name="update-"><br>
 
-        <label for="numRegistro">Número de Registro:</label>
-        <input type="text" id="update-numRegistro" name="numRegistro" required><br>
+        <label for="update-numRegistro">Número de Registro:</label>
+        <input type="text" id="update-numRegistro" name="update-numRegistro" required><br>
 
-        <label for="indicacao">Indicação:</label>
-        <textarea id="update-indicacao" name="indicacao" rows="4" required></textarea><br>
+        <label for="update-indicacao">Indicação:</label>
+        <textarea id="update-indicacao" name="update-indicacao" rows="4"></textarea><br>
 
-        <label for="contraindicacao">Contraindicação:</label>
-        <textarea id="udpate-contraindicacao" name="contraindicacao" rows="4" required></textarea><br>
+        <label for="update-contraindicacao">Contraindicação:</label>
+        <textarea id="udpate-contraindicacao" name="update-contraindicacao" rows="4"></textarea><br>
 
-        <label for="categoria">Categoria:</label>
-        <input type="text" id="update-categoria" name="categoria" required><br>
+        <label for="update-categoria">Categoria:</label>
+        <input type="text" id="update-categoria" name="update-categoria"><br>
 
-        <label for="cuidados">Cuidados:</label>
-        <textarea id="cuidados" name="cuidados" rows="4" required></textarea><br>
+        <label for="update-cuidados">Cuidados:</label>
+        <textarea id="cuidados" name="update-cuidados" rows="4"></textarea><br>
 
-        <label for="reacao_adversa">Reação Adversa:</label>
-        <textarea id="update-reacao_adversa" name="reacao_adversa" rows="4" required></textarea><br>
+        <label for="update-reacao_adversa">Reação Adversa:</label>
+        <textarea id="update-reacao_adversa" name="update-reacao_adversa" rows="4"></textarea><br>
 
-        <label for="posologia">Posologia:</label>
-        <textarea id="update-posologia" name="posologia" rows="4" required></textarea><br>
+        <label for="update-posologia">Posologia:</label>
+        <textarea id="update-posologia" name="update-posologia" rows="4"></textarea><br>
 
-        <label for="riscos">Riscos:</label>
-        <textarea id="update-riscos" name="riscos" rows="4" required></textarea><br>
+        <label for="update-riscos">Riscos:</label>
+        <textarea id="update-riscos" name="update-riscos" rows="4"></textarea><br>
 
-        <label for="especiais">Especiais:</label>
-        <textarea id="update-especiais" name="especiais" rows="4" required></textarea><br>
+        <label for="update-especiais">Especiais:</label>
+        <textarea id="update-especiais" name="update-especiais" rows="4"></textarea><br>
 
         <button type="button" id="atualizar">Atualizar Medicamento</button>
     </form>
@@ -99,7 +99,7 @@
 
             };
 
-            const response = await fetch('https://server-wikimedic.onrender.com/medicamentos/update', {
+            const response = await fetch('https://server-wikimedic.onrender.com/medicamentos/validate', {
                 method: 'POST',
                 headers: {
                     'Content-type': 'application/json; charset=UTF-8',
@@ -112,7 +112,6 @@
                 const json = await response.json()
                 console.log(json)
                 alert('Sucesso. ' + json.validacao_status)
-                // Optionally, you can reset the form or redirect to another page upon successful registration
             } else {
                 console.log('Algo deu errado');
             }
@@ -133,7 +132,7 @@
                 especiais: document.getElementById('especiais').value,
             };
 
-            const response = await fetch('https://server-wikimedic.onrender.com/medicamentos/validate', {
+            const response = await fetch('https://server-wikimedic.onrender.com/medicamentos/update', {
                 method: 'POST',
                 headers: {
                     'Content-type': 'application/json; charset=UTF-8',
