fix (registrarMedic.html): Corrige update medicamentos.

--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -58,13 +58,13 @@
         <textarea id="update-indicacao" name="update-indicacao" rows="4"></textarea><br>
 
         <label for="update-contraindicacao">Contraindicação:</label>
-        <textarea id="udpate-contraindicacao" name="update-contraindicacao" rows="4"></textarea><br>
+        <textarea id="update-contraindicacao" name="update-contraindicacao" rows="4"></textarea><br>
 
         <label for="update-categoria">Categoria:</label>
         <input type="text" id="update-categoria" name="update-categoria"><br>
 
         <label for="update-cuidados">Cuidados:</label>
-        <textarea id="cuidados" name="update-cuidados" rows="4"></textarea><br>
+        <textarea id="update-cuidados" name="update-cuidados" rows="4"></textarea><br>
 
         <label for="update-reacao_adversa">Reação Adversa:</label>
         <textarea id="update-reacao_adversa" name="update-reacao_adversa" rows="4"></textarea><br>
