refactor (medic.html): Refatora os títulos sobre o Medicamento.

--- a/html/medic.html
+++ b/html/medic.html
@@ -66,7 +66,7 @@
       <section class="header">
         <img src="../img/spy_family.jpg" alt="">
         <div>
-          <h1 id="medic-name">Spy X Family</h1>
+          <h1 id="medic-name"></h1>
           <p>Trata depressão, ansiedade, tédio e muito mais.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi voluptatem, earum consectetur doloribus nemo eos aliquam alias accusamus sunt, nostrum labore tempore dolorum? Facere vel nulla, quibusdam voluptas praesentium labore!
           </p>
@@ -76,7 +76,7 @@
       <section class="informations">
         <article>
           <div>
-            <h2>PARA O QUE É INDICADO E PARA O QUE SERVE O SPY X FAMILY</h2>
+            <h2>PARA O QUE É INDICADO E PARA O QUE SERVE</h2>
             <span id="0" class="fa-solid fa-chevron-down"></span>
           </div>
           <hr>
@@ -86,7 +86,7 @@
         </article>
         <article>
           <div>
-            <h2>POSOLOGIA DE SPY X FAMILY</h2>
+            <h2>POSOLOGIA</h2>
             <span id="1" class="fa-solid fa-chevron-down"></span>
           </div>
           <hr>
@@ -96,7 +96,7 @@
         </article>
         <article>
           <div>
-            <h2>SPY X FAMILY, CONTRAINDICAÇÕES</h2>
+            <h2>CONTRAINDICAÇÕES</h2>
             <span id="2" class="fa-solid fa-chevron-down"></span>
           </div>
           <hr>
@@ -106,7 +106,7 @@
         </article>
         <article>
           <div>
-            <h2>REAÇÕES ADVERSAS DE SPY X FAMILY</h2>
+            <h2>REAÇÕES ADVERSAS</h2>
             <span id="3" class="fa-solid fa-chevron-down"></span>
           </div>
           <hr>
@@ -116,15 +116,15 @@
         </article>
         <article>
           <div>
-            <h2>COMO USAR SPY X FAMILY</h2>
+            <h2>COMO USAR </h2>
             <span id="4" class="fa-solid fa-chevron-down"></span>
           </div>
           <hr>
-          <p>Acesse seu leitor de mangá (mais recomendado) como por exemplo, tachiyomi, mangalivre e entre outros. Ou streaming de anime, como por exemplo, crunchyroll, animes house e entre outros. Agora é só procurar por "SPY X FAMILY" e ler ou assistir com a familia.</p>
+          <p>Acesse seu leitor de mangá (mais recomendado) como por exemplo, tachiyomi, mangalivre e entre outros. Ou streaming de anime, como por exemplo, crunchyroll, animes house e entre outros. Agora é só procurar por "" e ler ou assistir com a familia.</p>
         </article>
         <article>
           <div>
-            <h2>CUIDADOS AO TOMAR SPY X FAMILY</h2>
+            <h2>CUIDADOS AO TOMAR </h2>
             <span id="5" class="fa-solid fa-chevron-down"></span>
           </div>
           <hr>
