--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
             console.log("Servidor Wikimedic Funcionando!");
           }
         }
+        if (userInfo.id != null && userInfo.id != "") {
+        console.log('Usuário logado')
+        var meuLink = document.getElementById('login-a');
+
+
+        var novoElementoI = document.createElement('i');
+        novoElementoI.classList.add('fa-solid')
+        novoElementoI.classList.add('fa-user')
+
+        for (var i = 0; i < meuLink.attributes.length; i++) {
+          novoElementoI.setAttribute(meuLink.attributes[i].name, meuLink.attributes[i].value);
+        }
+
+        // Substitui o elemento <a> pelo elemento <i>
+        meuLink.parentNode.replaceChild(novoElementoI, meuLink);
+      }
+
         home();
       </script>
       <script src="./js/search.js"></script>
