--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <script
+      src="https://kit.fontawesome.com/3f30397038.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../css/drugs_sect.css" />
     <link rel="stylesheet" href="../css/pediatria.css" />
@@ -28,7 +32,7 @@
         <ul id="result"></ul>
       </div>
       <div class="login">
-        <a href="./login.html">Login</a>
+        <a id="login-a" href="./login.html">Login</a>
         <nav class="menu">
           <input type="checkbox" class="menu-faketrigger" />
           <div class="menu-lines">
@@ -197,7 +201,7 @@
         </article>
       </div>
       <script type="module">
-        import { serverURL } from "../js/env.js";
+        import { serverURL, userInfo } from "../js/env.js";
         async function home() {
           const response = await fetch(
             "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
@@ -210,9 +214,6 @@
             console.log("API Bulario Funcionando");
           }
 
-          document.cookie = "meuCookie=valor; path=/";
-          console.log(document.cookie);
-
           const serverResponse = await fetch(serverURL);
           if (!serverResponse.ok) {
             alert(
@@ -222,6 +223,23 @@
             console.log("Servidor Wikimedic Funcionando!");
           }
         }
+        if (userInfo.id != null && userInfo.id != "") {
+        console.log('Usuário logado')
+        var meuLink = document.getElementById('login-a');
+
+
+        var novoElementoI = document.createElement('i');
+        novoElementoI.classList.add('fa-solid')
+        novoElementoI.classList.add('fa-user')
+
+        for (var i = 0; i < meuLink.attributes.length; i++) {
+          novoElementoI.setAttribute(meuLink.attributes[i].name, meuLink.attributes[i].value);
+        }
+
+        // Substitui o elemento <a> pelo elemento <i>
+        meuLink.parentNode.replaceChild(novoElementoI, meuLink);
+      }
+
         home();
       </script>
       <script src="../js/search.js"></script>
