--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <script
+      src="https://kit.fontawesome.com/3f30397038.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <title>Wikimedic</title>
@@ -170,7 +174,7 @@
         </article>
       </div>
       <script type="module">
-        import { serverURL } from "./js/env.js";
+        import { serverURL, userInfo } from "./js/env.js";
         async function home() {
           const response = await fetch(
             "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
