feat: Arruma os títulos dos benefícios de cada remédio, e seus textos.

--- a/html/alopaticos.html
+++ b/html/alopaticos.html
@@ -137,22 +137,31 @@
 
       <article class="benefits">
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS ALOPÁTICOS</h2>
-        <div>
-          <p>
-            Os medicamentos alopáticos passam por rigorosos testes clínicos e
-            são aprovados por agências reguladoras, garantindo sua eficácia no
-            tratamento de diversas doenças
-          </p>
-          <p>
-            Além de tratar doenças, alguns medicamentos alopáticos são usados na
-            prevenção, como vacinas e medicamentos para reduzir o risco de
-            doenças crônicas.
-          </p>
-          <p>
-            Eles são projetados para agir rapidamente no alívio dos sintomas,
-            proporcionando conforto em curto prazo
-          </p>
-        </div>
+        <section>
+          <article>
+            <h3>EFICÁCIA COMPROVADA</h3>
+            <p>
+              Os medicamentos alopáticos passam por rigorosos testes clínicos e
+              são aprovados por agências reguladoras, garantindo sua eficácia no
+              tratamento de diversas doenças.
+            </p>
+          </article>
+          <article>
+            <h3>PREVENÇÃO E TRATAMENTO DE DOENÇAS</h3>
+            <p>
+              Além de tratar doenças, alguns medicamentos alopáticos são usados
+              na prevenção, como vacinas e medicamentos para reduzir o risco de
+              doenças crônicas.
+            </p>
+          </article>
+          <article>
+            <h3>ALÍVIO RÁPIDO DE SINTOMAS</h3>
+            <p>
+              Eles são projetados para agir rapidamente no alívio dos sintomas,
+              proporcionando conforto em curto prazo.
+            </p>
+          </article>
+        </section>
       </article>
     </main>
     <footer>
