--- a/html/fitoterapicos.html
+++ b/html/fitoterapicos.html
@@ -142,24 +142,33 @@
 
       <article class="benefits">
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS FITOTERÁPICOS</h2>
-        <div>
-          <p>
-            Os fitoterápicos podem fortalecer o sistema imunológico, ajudando o
-            corpo a combater vírus e bactérias e resistir a doenças comuns como
-            gripes e resfriados.
-          </p>
-          <p>
-            Muitos fitoterápicos possuem propriedades anti-inflamatórias que
-            podem ajudar na redução de inflamações, como as causadas por
-            osteoporose ou artrite reumatoide, e também interromper a produção
-            de agentes causadores de inflamação.
-          </p>
-          <p>
-            Alguns fitoterápicos são úteis no tratamento da ansiedade e
-            depressão, contribuindo para a redução do nível de estresse causado
-            por essas condições.
-          </p>
-        </div>
+        <section>
+          <article>
+            <h3>MELHORA NO SISTEMA IMUNOLÓGICO</h3>
+            <p>
+              Os fitoterápicos podem fortalecer o sistema imunológico, ajudando
+              o corpo a combater vírus e bactérias e resistir a doenças comuns
+              como gripes e resfriados.
+            </p>
+          </article>
+          <article>
+            <h3>PROPRIEDADES ANTI-INFLAMATÓRIAS</h3>
+            <p>
+              Muitos fitoterápicos possuem propriedades anti-inflamatórias que
+              podem ajudar na redução de inflamações, como as causadas por
+              osteoporose ou artrite reumatoide, e também interromper a produção
+              de agentes causadores de inflamação.
+            </p>
+          </article>
+          <article>
+            <h3>AUXILIA NO TRATAMENTO DE DEPRESSÃO E ANSIEDADE</h3>
+            <p>
+              Alguns fitoterápicos são úteis no tratamento da ansiedade e
+              depressão, contribuindo para a redução do nível de estresse
+              causado por essas condições.
+            </p>
+          </article>
+        </section>
       </article>
     </main>
     <footer>
