--- a/html/genericos.html
+++ b/html/genericos.html
@@ -138,23 +138,32 @@
 
       <article class="benefits">
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS GENÉRICOS</h2>
-        <div>
-          <p>
-            Os genéricos são submetidos a rigorosos testes de bioequivalência e
-            devem cumprir com as mesmas normas de segurança dos medicamentos de
-            referência, garantindo a segurança do consumidor.
-          </p>
-          <p>
-            Eles têm autorização legal para substituir os medicamentos de
-            referência, oferecendo uma alternativa segura e eficaz para
-            tratamentos a um custo menor.
-          </p>
-          <p>
-            A presença dos genéricos no mercado estimula a concorrência, o que
-            pode levar à redução dos preços dos medicamentos de referência,
-            beneficiando todos os consumidores
-          </p>
-        </div>
+        <section>
+          <article>
+            <h3>REGULAÇÃO SANITÁRIA</h3>
+            <p>
+              Os genéricos são submetidos a rigorosos testes de bioequivalência
+              e devem cumprir com as mesmas normas de segurança dos medicamentos
+              de referência, garantindo a segurança do consumidor.
+            </p>
+          </article>
+          <article>
+            <h3>INTERCAMBIALIDADE</h3>
+            <p>
+              Eles têm autorização legal para substituir os medicamentos de
+              referência, oferecendo uma alternativa segura e eficaz para
+              tratamentos a um custo menor.
+            </p>
+          </article>
+          <article>
+            <h3>ESTÍMULO A CONCORRÊNCIA</h3>
+            <p>
+              A presença dos genéricos no mercado estimula a concorrência, o que
+              pode levar à redução dos preços dos medicamentos de referência,
+              beneficiando todos os consumidores.
+            </p>
+          </article>
+        </section>
       </article>
     </main>
     <footer>
