--- a/html/homeopaticos.html
+++ b/html/homeopaticos.html
@@ -141,22 +141,31 @@
 
       <article class="benefits">
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS HOMEOPÁTICOS</h2>
-        <div>
-          <p>
-            Os remédios homeopáticos são conhecidos por serem suaves e não
-            causarem efeitos colaterais significativos, tornando-os uma opção
-            segura para pessoas de todas as idades, incluindo idosos e bebês.
-          </p>
-          <p>
-            A homeopatia foca no equilíbrio orgânico e trata a pessoa como um
-            todo, buscando a raiz do problema para promover a melhora geral do
-            organismo.
-          </p>
-          <p>
-            São considerados seguros e eficazes, baseados em substâncias
-            naturais e utilizam substâncias simples em microdoses.
-          </p>
-        </div>
+        <section>
+          <article>
+            <h3>NÃO AGRIDE O ORGANISMO</h3>
+            <p>
+              Os remédios homeopáticos são conhecidos por serem suaves e não
+              causarem efeitos colaterais significativos, tornando-os uma opção
+              segura para pessoas de todas as idades, incluindo idosos e bebês.
+            </p>
+          </article>
+          <article>
+            <h3>TRATA O INDIVÍDUO NÃO APENAS A DOENÇA</h3>
+            <p>
+              A homeopatia foca no equilíbrio orgânico e trata a pessoa como um
+              todo, buscando a raiz do problema para promover a melhora geral do
+              organismo.
+            </p>
+          </article>
+          <article>
+            <h3>SEGURANÇA E EFICÁCIA</h3>
+            <p>
+              São considerados seguros e eficazes, baseados em substâncias
+              naturais e utilizam substâncias simples em microdoses.
+            </p>
+          </article>
+        </section>
       </article>
     </main>
     <footer>
