--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -142,27 +142,36 @@
       </article>
 
       <article class="benefits">
-        <h2>3 BENEFÍCIOS DOS MEDICAMENTOS PEDIATRIA</h2>
-        <div>
-          <p>
-            Os medicamentos pediátricos passam por testes rigorosos para
-            garantir que sejam seguros e eficazes para uso em crianças. Isso
-            ajuda a evitar a extrapolação de dados de adultos para crianças, que
-            podem ter respostas diferentes aos medicamentos.
-          </p>
-          <p>
-            Eles estão disponíveis em formas farmacêuticas adequadas para
-            crianças, como líquidos, suspensões e mastigáveis, facilitando a
-            administração e garantindo que as crianças possam tomar o
-            medicamento de forma segura e confortável.
-          </p>
-          <p>
-            Os medicamentos pediátricos são formulados para fornecer a dosagem
-            correta com base no peso e na idade da criança, o que é crucial para
-            a eficácia do tratamento e para minimizar os riscos de efeitos
-            colaterais.
-          </p>
-        </div>
+        <h2>3 BENEFÍCIOS DOS MEDICAMENTOS PEDIÁTRICOS</h2>
+        <section>
+          <article>
+            <h3>SEGURANÇA E EFICÁCIA</h3>
+            <p>
+              Os medicamentos pediátricos passam por testes rigorosos para
+              garantir que sejam seguros e eficazes para uso em crianças. Isso
+              ajuda a evitar a extrapolação de dados de adultos para crianças,
+              que podem ter respostas diferentes aos medicamentos.
+            </p>
+          </article>
+          <article>
+            <h3>FORMAS FARMACÊUTICAS ADEQUADAS</h3>
+            <p>
+              Eles estão disponíveis em formas farmacêuticas adequadas para
+              crianças, como líquidos, suspensões e mastigáveis, facilitando a
+              administração e garantindo que as crianças possam tomar o
+              medicamento de forma segura e confortável.
+            </p>
+          </article>
+          <article>
+            <h3>DOSAGEM APROPRIADA</h3>
+            <p>
+              Os medicamentos pediátricos são formulados para fornecer a dosagem
+              correta com base no peso e na idade da criança, o que é crucial
+              para a eficácia do tratamento e para minimizar os riscos de
+              efeitos colaterais.
+            </p>
+          </article>
+        </section>
       </article>
     </main>
 
