--- a/html/similares.html
+++ b/html/similares.html
@@ -140,27 +140,37 @@
 
       <article class="benefits">
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS SIMILARES</h2>
-        <div>
-          <p>
-            Os remédios similares geralmente são mais acessíveis em comparação
-            com os medicamentos de marca. Isso pode ser especialmente vantajoso
-            para pacientes que precisam de tratamentos de longo prazo.
-          </p>
-          <p>
-            Os medicamentos similares devem passar por testes rigorosos para
-            garantir que sejam bioequivalentes aos medicamentos de marca. Isso
-            significa que eles contêm os mesmos ingredientes ativos em
-            concentrações semelhantes, o que resulta em efeitos terapêuticos
-            equivalentes.
-          </p>
-          <p>
-            A disponibilidade de medicamentos similares pode aumentar o acesso a
-            tratamentos essenciais para uma variedade de condições médicas. Isso
-            é particularmente significativo em áreas onde os custos dos
-            medicamentos de marca podem representar um obstáculo para muitos
-            pacientes.
-          </p>
-        </div>
+        <section>
+          <article>
+            <h3>CUSTO MAIS BAIXO</h3>
+            <p>
+              Os remédios similares geralmente são mais acessíveis em comparação
+              com os medicamentos de marca. Isso pode ser especialmente
+              vantajoso para pacientes que precisam de tratamentos de longo
+              prazo.
+            </p>
+          </article>
+          <article>
+            <h3>EQUIVALÊNCIA TERAPÊUTICA</h3>
+            <p>
+              Os medicamentos similares devem passar por testes rigorosos para
+              garantir que sejam bioequivalentes aos medicamentos de marca. Isso
+              significa que eles contêm os mesmos ingredientes ativos em
+              concentrações semelhantes, o que resulta em efeitos terapêuticos
+              equivalentes.
+            </p>
+          </article>
+          <article>
+            <h3>AUMENTO DO ACESSO A TRATAMENTO</h3>
+            <p>
+              A disponibilidade de medicamentos similares pode aumentar o acesso
+              a tratamentos essenciais para uma variedade de condições médicas.
+              Isso é particularmente significativo em áreas onde os custos dos
+              medicamentos de marca podem representar um obstáculo para muitos
+              pacientes.
+            </p>
+          </article>
+        </section>
       </article>
     </main>
     <footer>
