feat (index.html): Adiciona type=module.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         home();
       </script>
-      <script src="./js/search.js"></script>
+      <script src="./js/search.js" type="module"></script>
       <!-- <script src="./js/api/script.js"></script> -->
     </footer>
   </body>
