--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -63,6 +63,16 @@
         <button type="button" id="registrar">Registrar Medicamento</button>
     </form>
 
+    <h2>Consultar Medicamentos</h2>
+    <table id="tableLoadMedic">
+        <tr>
+            <td>Name</td>
+            <td>NumRegistro</td>
+            <td>Categoria</td>
+            <td>Link Wikimedic</td>
+        </tr>
+    </table>
+
     <h1>Update Medicamentos</h1>
 
     <form id="medicationForm">
@@ -98,6 +108,8 @@
 
         <button type="button" id="atualizar">Atualizar Medicamento</button>
     </form>
+
+    
 
     <script>
         async function registerMedication() {
@@ -170,7 +182,29 @@
                 alert('Algo deu Errado!!.')
             }
         }
-        document.querySelector('#atualizar').addEventListener('click', updateMedic)
+        document.querySelector('#atualizar').addEventListener('click', updateMedic);
+
+        (async () =>
+        {
+            const response = await fetch('https://server-wikimedic.onrender.com/medicamentos');
+            if(response.ok)
+            {
+                const json = await response.json()
+                console.log(json)
+                json.forEach(i => {
+                    const link = `https://massivo5040.github.io/Wikimedic/html/medic.html?numRegistro=${i.numRegistro}`
+                    let categoria = i.categoria.toUpperCase()
+                    document.querySelector('#tableLoadMedic').innerHTML += `
+                    <tr>
+                        <td>${i.name}</td>
+                        <td>${i.numRegistro}</td>
+                        <td>${categoria}</td>
+                        <td><a href="${link}">${i.name} : Wikimedic</a></td>
+                    </tr>
+                    `
+                });
+            }
+        })()
     </script>
 
 </body>
