quero que o nosso site se exploda

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -244,6 +244,19 @@
         </div>
       </article>
 
+      <article class="infographic">
+        <div class="first_image">
+          <img src="../img/info_1.png" alt="Primeira parte do infográfico" />
+        </div>
+        <div class="second_image third_image">
+          <img src="../img/info_2.png" alt="Segunda parte do infográfico" />
+          <img src="../img/info_3.png" alt="Terceira parte do infográfico" />
+        </div>
+        <div class="fourth_image">
+          <img src="../img/info_4.png" alt="Quarta parte do infográfico" />
+        </div>
+      </article>
+
       <article class="cannabis">
         <h2>CANNABIS SATIVA</h2>
         <p>
@@ -312,21 +325,23 @@
           }
         }
         if (userInfo.id != null && userInfo.id != "") {
-        console.log('Usuário logado')
-        var meuLink = document.getElementById('login-a');
+          console.log("Usuário logado");
+          var meuLink = document.getElementById("login-a");
 
+          var novoElementoI = document.createElement("i");
+          novoElementoI.classList.add("fa-solid");
+          novoElementoI.classList.add("fa-user");
 
-        var novoElementoI = document.createElement('i');
-        novoElementoI.classList.add('fa-solid')
-        novoElementoI.classList.add('fa-user')
+          for (var i = 0; i < meuLink.attributes.length; i++) {
+            novoElementoI.setAttribute(
+              meuLink.attributes[i].name,
+              meuLink.attributes[i].value
+            );
+          }
 
-        for (var i = 0; i < meuLink.attributes.length; i++) {
-          novoElementoI.setAttribute(meuLink.attributes[i].name, meuLink.attributes[i].value);
+          // Substitui o elemento <a> pelo elemento <i>
+          meuLink.parentNode.replaceChild(novoElementoI, meuLink);
         }
-
-        // Substitui o elemento <a> pelo elemento <i>
-        meuLink.parentNode.replaceChild(novoElementoI, meuLink);
-      }
 
         home();
       </script>
