--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -7,6 +7,7 @@
     <title>Registro de Medicamentos</title>
 
     <link rel="stylesheet" href="../css/registrar.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -233,10 +234,13 @@
                     tdLink.appendChild(a)
 
                     const tdButton = document.createElement('td')
-                    const button = document.createElement('td')
+                    const button = document.createElement('span')
                     tdButton.appendChild(button)
 
-                    button.textContent = "Update"
+                    button.classList.add('update-button')
+                    button.classList.add('material-symbols-rounded')
+
+                    button.innerHTML = "edit"
                     button.addEventListener('click', () => {
                         document.querySelector('#medSelected').textContent = `Medicamento Selecionado: ${i.name}. Número Registro salvo: ${i.numRegistro}`
                         document.querySelector('#update-name').value = i.name
