--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -7,7 +7,8 @@
     <title>Registro de Medicamentos</title>
 
     <link rel="stylesheet" href="../css/registrar.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -79,7 +80,7 @@
 
     <form id="medicationForm">
         <p id="medSelected"></p>
-        
+
         <div class="form-head">
             <label for="update-categoria">Categoria:</label>
             <select id="update-categoria" name="categoria" required>
@@ -125,6 +126,35 @@
     </form>
 
 
+    <footer>
+        <div>
+            <article class="about_us">
+                <p class="title">
+                    <a href="./sobre.html">Sobre nós</a>
+                </p>
+                <p class="topic">
+                    <a href="./sobre.html#mission">Missão</a>
+                </p>
+                <p class="topic">
+                    <a href="./sobre.html#vision">Visão</a>
+                </p>
+                <p class="topic">
+                    <a href="./sobre.html#values">Valores</a>
+                </p>
+            </article>
+            <article class="contact">
+                <p class="title">Contato</p>
+                <p class="topic">wikimedic@yourcompany.com</p>
+                <p class="topic">(11)-00000-0000</p>
+            </article>
+            <article class="social_media">
+                <a href=""><img src="../img/facebook_logo.png" alt="Logo do facebook" /></a>
+                <a href=""><img src="../img/instagram_logo.png" alt="Logo do instagram" /></a>
+                <a href=""><img src="../img/twitter_logo.png" alt="Logo do twitter" /></a>
+                <p>2023 - © Wikimedic. Todos os Direitos Reservados</p>
+            </article>
+        </div>
+    </footer>
 
     <script>
         let numRegistroNow = ''
@@ -230,7 +260,7 @@
                     const tdLink = document.createElement('td')
                     const a = document.createElement('a')
                     a.href = link
-                    a.textContent = i.name 
+                    a.textContent = i.name
                     tdLink.appendChild(a)
 
                     const tdButton = document.createElement('td')
@@ -261,18 +291,16 @@
                     deleteButton.classList.add('delete-button')
                     deleteButton.innerHTML = 'delete_forever'
 
-                    deleteButton.addEventListener('click', async ()=>{
-                        const response = await fetch('https://server-wikimedic.onrender.com' + `/medicamentos/delete/numRegistro/${i.numRegistro}`, 
-                        {
-                            method: "DELETE"
-                        })
+                    deleteButton.addEventListener('click', async () => {
+                        const response = await fetch('https://server-wikimedic.onrender.com' + `/medicamentos/delete/numRegistro/${i.numRegistro}`,
+                            {
+                                method: "DELETE"
+                            })
 
-                        if(response.ok)
-                        {
+                        if (response.ok) {
                             alert('Medicamento Deletado')
                         }
-                        else
-                        {
+                        else {
                             alert('Erro ao deletar Medicamento')
                         }
                     })
