fix: Adiciona pequenos ajustes em algumas páginas

--- a/html/homeopaticos.html
+++ b/html/homeopaticos.html
@@ -92,45 +92,45 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1705600480217" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 3 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Xarelto</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
+                <img src="../img/example_medic.png" />
                 <figcaption>Senku 4 bilhões de mL</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
+                <img src="../img/example_medic.png" />
                 <figcaption>Senku 5 bilhões de mL</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
+                <img src="../img/example_medic.png" />
                 <figcaption>Senku 6 bilhões de mL</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
+                <img src="../img/example_medic.png" />
                 <figcaption>Senku 7 bilhões de mL</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
+                <img src="../img/example_medic.png" />
                 <figcaption>Senku 8 bilhões de mL</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
+                <img src="../img/example_medic.png" />
                 <figcaption>Senku 9 bilhões de mL</figcaption>
               </figure>
             </a>
