--- a/html/medic.html
+++ b/html/medic.html
@@ -1,169 +1,158 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script
-    src="https://kit.fontawesome.com/3f30397038.js"
-    crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="../style.css" />
-  <link rel="stylesheet" href="../css/medic.css" />
-  <title>Wikimedic</title>
-</head>
+      src="https://kit.fontawesome.com/3f30397038.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/medic.css" />
+    <title>Wikimedic</title>
+  </head>
 
-<body>
-  <header>
-    <div class="logo">
-      <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
-    </div>
-    <nav class="main-nav">
-      <a href="../index.html">Home</a>
-      <a href="./hot_drugs.html">Em alta</a>
-      <a href="./sobre.html">Sobre nós</a>
-    </nav>
-    <div class="search">
-      <input type="text" id="search" />
-      <span class="material-symbols-rounded">search</span>
-      <ul id="result"></ul>
-    </div>
-    <div class="login">
-      <a href="./login.html">Login</a>
-      <nav class="menu">
-        <input type="checkbox" class="menu-faketrigger" />
-        <div class="menu-lines">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <ul>
-          <li class="responsive-extra">
-            <a href="../index.html">Home</a>
-          </li>
-          <li class="responsive-extra">
-            <a href="./hot_drugs.html">Em alta</a>
-          </li>
-          <li class="responsive-extra">
-            <a href="./sobre.html">Sobre nós</a>
-          </li>
-          <li><a href="./pediatria.html">Pediatria</a></li>
-          <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
-          <li><a href="./genericos.html">Genéricos</a></li>
-          <li><a href="./homeopaticos.html">Homeopáticos</a></li>
-          <li><a href="./similares.html">Similares</a></li>
-          <li><a href="./alopaticos.html">Alopáticos</a></li>
-          <li><a href="./about_project.html">Sobre o projeto</a></li>
-        </ul>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
+      </div>
+      <nav class="main-nav">
+        <a href="../index.html">Home</a>
+        <a href="./hot_drugs.html">Em alta</a>
+        <a href="./sobre.html">Sobre nós</a>
       </nav>
-    </div>
-  </header>
+      <div class="search">
+        <input type="text" id="search" />
+        <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
+      </div>
+      <div class="login">
+        <a href="./login.html">Login</a>
+        <nav class="menu">
+          <input type="checkbox" class="menu-faketrigger" />
+          <div class="menu-lines">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <ul>
+            <li class="responsive-extra">
+              <a href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
+            <li><a href="./pediatria.html">Pediatria</a></li>
+            <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
+            <li><a href="./genericos.html">Genéricos</a></li>
+            <li><a href="./homeopaticos.html">Homeopáticos</a></li>
+            <li><a href="./similares.html">Similares</a></li>
+            <li><a href="./alopaticos.html">Alopáticos</a></li>
+            <li><a href="./about_project.html">Sobre o projeto</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <main>
-    <article class="drug">
-      <section class="header">
-        <img src="../img/spy_family.jpg" alt="">
-        <div>
-          <h1 id="medic-name"></h1>
-          <p>Trata depressão, ansiedade, tédio e muito mais.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi voluptatem, earum consectetur doloribus nemo eos aliquam alias accusamus sunt, nostrum labore tempore dolorum? Facere vel nulla, quibusdam voluptas praesentium labore!
-          </p>
-          <a id="medic-pdf">PDF BULA</a>
-        </div>
-      </section>
-      <section class="informations">
-        <article>
+    <main>
+      <article class="drug">
+        <section class="header">
+          <img
+            src="../img/example_medic.png"
+            alt="Ícone de um frasco de remédio"
+          />
           <div>
-            <h2>PARA O QUE É INDICADO E PARA O QUE SERVE</h2>
-            <span id="0" class="fa-solid fa-chevron-down"></span>
+            <h1 id="medic-name"></h1>
+            <p>Remédio não registrado.</p>
+            <a id="medic-pdf">PDF BULA</a>
           </div>
-          <hr>
-          <p>Ele é indicado para pessoas que não estão tendo bons dias,e serve para te deixar mais feliz e contente.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum sed unde doloremque maxime iste consequatur, excepturi possimus quas, impedit nostrum omnis! Fugiat et odio, a nihil non esse corporis delectus?
-          </p>
-        </article>
-        <article>
-          <div>
-            <h2>POSOLOGIA</h2>
-            <span id="1" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Não sei o que é posologia.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe molestiae dignissimos, adipisci possimus distinctio tempora sequi nemo accusantium soluta, voluptatem explicabo sunt fugit fugiat. Blanditiis, laudantium esse. Nihil, iusto ex?
-          </p>
-        </article>
-        <article>
-          <div>
-            <h2>CONTRAINDICAÇÕES</h2>
-            <span id="2" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Não tem.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quo maxime labore consectetur perspiciatis quisquam doloribus nulla repudiandae id nisi ducimus saepe laudantium molestiae, eaque ullam assumenda necessitatibus corporis aliquid.
-          </p>
-        </article>
-        <article>
-          <div>
-            <h2>REAÇÕES ADVERSAS</h2>
-            <span id="3" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Felicidade extrema podendo acarretar na tomada de decisões sem pensar.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid veritatis, illum dignissimos et aspernatur delectus similique voluptatum qui laudantium quos nesciunt maiores optio voluptates at corporis natus ipsa. Iusto, expedita.
-          </p>
-        </article>
-        <article>
-          <div>
-            <h2>COMO USAR </h2>
-            <span id="4" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Acesse seu leitor de mangá (mais recomendado) como por exemplo, tachiyomi, mangalivre e entre outros. Ou streaming de anime, como por exemplo, crunchyroll, animes house e entre outros. Agora é só procurar por "" e ler ou assistir com a familia.</p>
-        </article>
-        <article>
-          <div>
-            <h2>CUIDADOS AO TOMAR </h2>
-            <span id="5" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Não passe muito tempo lendo ou assistindo pois pode causar problemas nas vistas ou coluna, portanto converse com sua familia sobre cada episódio e se divirta com eles para evitar esses riscos.</p>
-        </article>
-        <article>
-          <div>
-            <h2>RISCOS</h2>
-            <span id="6" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Nenhum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, veritatis deserunt recusandae neque perferendis, vitae molestiae incidunt consequuntur, temporibus beatae at vel fugit a nesciunt iste odit quia deleniti sapiente?
-          </p>
-        </article>
-        <article>
-          <div>
-            <h2>PACIENTES ESPECIAIS</h2>
-            <span id="7" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Veja a vontade você está prestes a tomar uma das melhores decisões da sua vida.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, maiores consequatur. Suscipit, quasi temporibus ipsam consectetur quae dolore ex eum vitae asperiores ut reprehenderit labore cum saepe maxime quisquam nulla?
-          </p>
-        </article>
-        <article>
-          <div>
-            <h2>SUPERDOSE (MAIOR QUE O RECOMENDADO)</h2>
-            <span id="8" class="fa-solid fa-chevron-down"></span>
-          </div>
-          <hr>
-          <p>Saia com a sua família, coma alguma coisa sem ver ou ler e pratique atividades físicas.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore sit adipisci velit? Quaerat exercitationem, alias quia eveniet deleniti doloribus sint enim adipisci aliquid, facere consequatur sit, saepe cumque explicabo sequi.
-          </p>
-        </article>
-      </section>
-    </article >
+        </section>
+        <section class="informations">
+          <article>
+            <div>
+              <h2>PARA O QUE É INDICADO E PARA O QUE SERVE</h2>
+              <span id="0" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>POSOLOGIA</h2>
+              <span id="1" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>CONTRAINDICAÇÕES</h2>
+              <span id="2" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>REAÇÕES ADVERSAS</h2>
+              <span id="3" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>COMO USAR</h2>
+              <span id="4" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>CUIDADOS AO TOMAR</h2>
+              <span id="5" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>RISCOS</h2>
+              <span id="6" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>PACIENTES ESPECIAIS</h2>
+              <span id="7" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+          <article>
+            <div>
+              <h2>SUPERDOSE (MAIOR QUE O RECOMENDADO)</h2>
+              <span id="8" class="fa-solid fa-chevron-down"></span>
+            </div>
+            <hr />
+            <p>Remédio não registrado.</p>
+          </article>
+        </section>
+      </article>
+    </main>
     <script type="module">
-      import { serverURL, userInfo } from "./js/env.js";
+      import { serverURL, userInfo } from "../js/env.js";
       async function home() {
         const response = await fetch(
           "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
@@ -186,21 +175,23 @@
         }
       }
       if (userInfo.id != null && userInfo.id != "") {
-      console.log('Usuário logado')
-      var meuLink = document.getElementById('login-a');
+        console.log("Usuário logado");
+        var meuLink = document.getElementById("login-a");
 
+        var novoElementoI = document.createElement("i");
+        novoElementoI.classList.add("fa-solid");
+        novoElementoI.classList.add("fa-user");
 
-      var novoElementoI = document.createElement('i');
-      novoElementoI.classList.add('fa-solid')
-      novoElementoI.classList.add('fa-user')
+        for (var i = 0; i < meuLink.attributes.length; i++) {
+          novoElementoI.setAttribute(
+            meuLink.attributes[i].name,
+            meuLink.attributes[i].value
+          );
+        }
 
-      for (var i = 0; i < meuLink.attributes.length; i++) {
-        novoElementoI.setAttribute(meuLink.attributes[i].name, meuLink.attributes[i].value);
+        // Substitui o elemento <a> pelo elemento <i>
+        meuLink.parentNode.replaceChild(novoElementoI, meuLink);
       }
-
-      // Substitui o elemento <a> pelo elemento <i>
-      meuLink.parentNode.replaceChild(novoElementoI, meuLink);
-    }
 
       home();
     </script>
@@ -209,6 +200,5 @@
     <script src="../js/metodoServer.js" type="module" defer></script>
     <script src="../js/medic_load.js" type="module"></script>
     <script src="../js/show_information.js"></script>
-</body>
-
+  </body>
 </html>
